--- a/app/views/search/user_detail.jade
+++ b/app/views/search/user_detail.jade
@@ -29,7 +29,7 @@ block content
                         .col-lg-12
                             .btn-toolbar.m-t-10(role='toolbar')
                                 .pull-left
-                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='javascript:goList(selectedPage);')
+                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='javascript:goList();')
                                         i.fa.fa-bars
                                         |  목록
                                     button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='window.print();')
