psw default.jade 경로 수정

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -89,7 +89,7 @@ html
                   li
                     a(href='/incident') 처리진행현황
                   li
-                    a(href='/search/qna') 자주묻는 질문과답
+                    a(href='/search/user_qna') 자주묻는 질문과답
                   li
                     a(href='/search/user_list')
                       | 처리된 내용검색 
