--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -134,7 +134,9 @@ block content
                       tbody(id='more_list')
                   .row
                     .col-sm-4
-                      .dataTables_info Showing 1 to 15 of 57 entries
+                      .dataTables_info Showing 1 to 15 of 
+                        span(id='totalPage')
+                        |  entries
                     .col-sm-8
                       .dataTables_paginate.paging_simple_numbers.pull-right
                         ul#paging.pagination
