#KSY 비밀번호 확인 체크로직 추가

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -157,6 +157,10 @@ html
                                         .col-sm-8
                                             input.form-control(id='password' name='usermanage[password]' type='password' required value='')
                                     .form-group
+                                        label.col-sm-3.control-label 비밀번호 확인
+                                        .col-sm-8
+                                            input.form-control(id='passwordChk' name='usermanage[passwordChk]' type='password' required value='')
+                                    .form-group
                                         label.col-sm-3.control-label 이름
                                         .col-sm-8
                                             input.form-control(id='employee_nm' name='usermanage[employee_nm]' type='text' required value='')
