#KSY 비밀번호 체크 수정

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -95,20 +95,20 @@ html
                                 a.btn.btn-outline-wprimary(data-target='#usermanageNew_modal', data-toggle='modal', type='button')
                                     i.md.md-person-add.m-r-10
                                     | 계정신청
-            p.m-t.login-copy.text-white
+            p.m-t.login-copy.text-white.text-center
                 small
                     strong.m-r-5 Copyright
                     | ISU SYSTEM Co. Ltd. ALL RIGHT RESERVED. © 2017
             .row.login-banner
-                .col-md-4
+                .col-md-4.text-center
                     a.btn.btn-outline-wprimary(href='http://www.isusystem.com', target='_blank')
                         i.md.md-domain.m-r-10
                         b 회사소개
-                .col-md-4
+                .col-md-4.text-center
                     a.btn.btn-outline-wwarning(href='http://blog.isusystem.com/', target='_blank')
                         i.md.md-local-cafe.m-r-10
                         b 블로그
-                .col-md-4.text
+                .col-md-4.text-center
                     a.btn.btn-outline-winfo(href='http://www.isusystem.com/kor/customer/getCus1002Html.do', target='_blank')
                         i.md.md-place.m-r-10
                         b 찾아오시는길
