--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -23,6 +23,8 @@ html
             script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
             script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
         
+        script(type='text/javascript').
+            var companyObj = !{JSON.stringify(company).replace(/<\//g, '<\\/')};
         script(src='/isu/js/index.js')
         
     body
@@ -176,6 +178,20 @@ html
                                         label.col-sm-3.control-label 연락처
                                         .col-sm-8
                                             input.form-control(id='hp_telno' name='usermanage[hp_telno]' type='text' placeholder='010-0000-0000' value='')
+                                    .form-group(style='display:none')
+                                        label.col-sm-3.control-label 회사주소1
+                                        .col-sm-3
+                                            input.form-control(id='dom_post_cd1' name='usermanage[dom_post_cd1]', type='text', value='')
+                                        .col-sm-5
+                                            input.form-control(id='dom_addr' name='usermanage[dom_addr]', type='text', value='')
+                                    .form-group(style='display:none')
+                                        label.col-sm-3.control-label 회사주소2
+                                        .col-sm-8
+                                            input.form-control(id='dom_addr2' name='usermanage[dom_addr2]', type='text', value='')
+                                    .form-group(style='display:none')
+                                        label.col-sm-3.control-label 회사전화번호
+                                        .col-sm-8
+                                            input.form-control(id='office_tel_no' name='usermanage[office_tel_no]' type='text' value='')
                                     .form-group(style='display:none')
                                         label.col-sm-3.control-label 사용자권한구분
                                         .col-sm-8
