--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -127,7 +127,7 @@ block content
                         tr
                           th(class='text-center' width='16%') 상위업무명
                           th(class='text-center' width='16%') 하위업무명
-                          th(class='text-center') 제목
+                          th(class='text-center' id='title') 제목
                           th(class='text-center' width='15%') 등록일
                           th(class='text-center' width='15%') 담당자
                       tbody(id='more_list')
