--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -54,6 +54,7 @@ block head
     script(src='/isu/js/incident/new.js', type='text/javascript')
 
     script(src='/isu/js/search/mng_list.js', type='text/javascript')
+    script(src='/isu/js/download.js') 
 
 
 block content
@@ -123,8 +124,14 @@ block content
                         
             .row
               .col-lg-12
+                .form-group
+                  button.btn.btn-warning.waves-effect.waves-light.m-l-5(id='btnExport' onclick="fnTableToExcel(document.getElementById('dvData'));") 
+                    i.fa.fa-download
+                    |  엑셀다운로드            
+            .row
+              .col-lg-12
                   .card-box
-                    table.table.table-bordered(id='lists')
+                    table.table.table-bordered(id='dvData')
                       thead
                         tr
                           th(class='text-center' width='16%') 상위업무명
@@ -133,6 +140,7 @@ block content
                           th(class='text-center' width='15%') 등록일
                           th(class='text-center' width='15%') 담당자
                       tbody(id='more_list')
+                      iframe#txtArea1(style='display:none')
                   .row
                     .col-sm-4
                       .dataTables_info Showing 1 to 15 of 
