--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -21,8 +21,8 @@ block head
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
     // jQuery
-    script(src='/assets/js/jquery.min.js')
-    script(src='/assets/js/bootstrap.min.js')
+    //script(src='/assets/js/jquery.min.js')
+    //script(src='/assets/js/bootstrap.min.js')
     script(src='/assets/js/detect.js')
     script(src='/assets/js/fastclick.js')
     script(src='/assets/js/jquery.slimscroll.js')
@@ -160,11 +160,12 @@ block content
                 // end Grid Area
             // end container
         // end content
-    //접수모달
+    //상세모달
     #wdetail_modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='custom-width-modalLabel', aria-hidden='true', style='display: none;')
         .modal-dialog(style='width:80%;')
             .modal-content
                 .modal-header
+                    button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
                 .modal-body
                     // Page-Title
                     .row
@@ -184,15 +185,15 @@ block content
                                         button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button', onClick="javascript:$('#wdetail_modal').modal('hide')")
                                             i.fa.fa-bars
                                             | 목록
-                                        button.btn.btn-inverse.waves-effect.waves-light.m-l-5(type='button', data-toggle='modal', data-target='#receipt_modal')
+                                        button#receiptBtn.btn.btn-inverse.waves-effect.waves-light.m-l-5(type='button', data-toggle='modal', data-target='#receipt_modal', style='display: none;')
                                             i.fa.fa-edit
                                             | 접수
-                                        button.btn.btn-purple.waves-effect.waves-light.m-l-5(type='button', data-toggle='modal', data-target='#complete_modal')
+                                        button#completeBtn.btn.btn-purple.waves-effect.waves-light.m-l-5(type='button', data-toggle='modal', data-target='#complete_modal', style='display: none;')
                                             i.fa.fa-check
                                             | 완료    
-                                        button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button')
-                                            i.fa.fa-print
-                                            | S인쇄
+                                        //button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button', onclick='window.print()')
+                                        //    i.fa.fa-print
+                                        //    | 인쇄
                                     //.pull-right
                                         button.btn.btn-info.waves-effect.waves-light.m-r-5(type='button')
                                             i.fa.fa-file-pdf-o
@@ -302,7 +303,8 @@ block content
                                         tr
                                             th.bg-muted 평가
                                             td#_valuation
-                                            th.bg-muted 공개여부 / 조회수
+                                            //th.bg-muted 공개여부 / 조회수
+                                            th.bg-muted 공개여부
                                             td#_complete_open_flag-reading_cnt
                                         tr
                                             th.bg-muted.text-danger 내부공유사항
@@ -363,7 +365,7 @@ block content
                                     .form-group
                                         label.col-sm-2.control-label 난이도
                                         .col-sm-5
-                                            select.form-control(name='incident[complete_reserve_date]')
+                                            select.form-control(name='incident[business_level]')
                                     //.form-group
                                         label.col-sm-2.control-label 결재상신여부
                                         .col-sm-3
@@ -390,9 +392,9 @@ block content
                         .col-sm-12
                             .btn-toolbar.m-b-10(role='toolbar')
                                 .pull-right
-                                    button.btn.btn-sm.btn-primary.waves-effect.waves-light(type='button')
+                                    button#completeSaveBtn.btn.btn-sm.btn-primary.waves-effect.waves-light(type='button')
                                         i.fa.fa-check.m-l-5
-                                        |  확인
+                                        |  저장
                     // End Button Area
                     // start Insert Area
                     .row
@@ -403,41 +405,33 @@ block content
                                         label.col-sm-2.control-label 해결여부
                                         .col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
-                                                input#singleCheckbox1(type='checkbox', value='option1', aria-label='Single checkbox One')
+                                                input(type='checkbox', value='Y', aria-label='Single checkbox One', checked)
                                                 label
                                         label.col-sm-2.control-label 처리구분
-                                        .col-sm-3
-                                            select.form-control
-                                                option 처리구분없음
-                                                option 항목1
-                                                option 항목2
-                                                option 항목3
+                                        .col-sm-6
+                                            select.form-control(name='incident[process_cd]')
                                     .form-group
                                         label.col-sm-2.control-label 처리내용
                                         .col-sm-10
-                                            textarea.form-control(rows='4')
-                                    .form-group
-                                        label.col-sm-2.control-label 프로그램_ID
-                                        .col-sm-10
-                                            textarea.form-control(rows='2')
+                                            textarea.form-control(name='incident[complete_content]', rows='8')
                                     hr
                                     .form-group
                                         label.col-sm-2.control-label 공개여부
                                         .col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
-                                                input#singleCheckbox1(type='checkbox', value='option1', aria-label='Single checkbox One')
+                                                input(name='incident[complete_open_flag]', type='checkbox', value='Y', aria-label='Single checkbox One')
                                                 label
-                                        label.col-sm-2.control-label 처리소요시간
+                                        label.col-sm-2.control-label 처리시간
                                         .col-sm-3
-                                            input.form-control.fw-60(type='text', style='display:inline-block')
+                                            input.form-control.fw-60(name='incident[work_time]', type='text', style='display:inline-block', value='1')
                                             span(style='display:inline-block; padding-left:10px;') 시간
                                     .form-group
                                         label.col-sm-2.control-label 지연사유
                                         .col-sm-10
-                                            textarea.form-control(rows='2')
+                                            textarea.form-control(name='incident[delay_reason]', rows='2')
                                     .form-group
-                                        label.col-sm-2.control-label 내부 공유사항
+                                        label.col-sm-2.control-label 처리공유
                                         .col-sm-10
-                                            textarea.form-control(rows='4')
+                                            textarea.form-control(name='incident[sharing_content]', rows='4')
 
 block footer    
