#KSY default.jade 수정

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -34,7 +34,7 @@ html
     #wrapper.forced
       // <div id="wrapper" class="enlarged forced">
       // // max-width 767px 또는 mobile device 일때 enlarged class 필요 //
-      - if(session.group_flag =="out" && session.user_flag != null){
+      - if(session.group_flag =="in" && session.user_flag != null){
       // Top Bar Start
       .topbar
         // LOGO
