--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -126,7 +126,7 @@ block content
                                             input.form-control(type='text', name='incident[title]', style = "ime-mode:active", required)
                                     .form-group
                                         .col-sm-12
-                                            textarea#summernote.summernote
+                                            textarea#summernote.summernote(name='incident[content]')
                                     .row
                                         .col-md-12.portlets
                                             .m-b-30
