#PSW -Invalid time 오류 -user_list 상위업무제외

--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -119,7 +119,7 @@ block content
                             table.table.table-bordered(id='lists')
                                 thead
                                     tr
-                                        th(class='text-center' width='16%') 상위업무명
+                                        //th(class='text-center' width='16%') 상위업무명
                                         th(class='text-center' width='16%') 하위업무명
                                         th(class='text-center' id='title') 제목
                                         th(class='text-center' width='15%') 등록일
