--- a/app/views/incident/new_mng.jade
+++ b/app/views/incident/new_mng.jade
@@ -118,6 +118,7 @@ block content
                                                 .input-group
                                                     input#datepicker-rcd.form-control(type='text', placeholder='yyyy/mm/dd', name='incident[request_complete_date]')
                                                     span.input-group-addon.bg-primary.b-0.text-white
+                                                        i.ion-calendar
                                     .form-group
                                         label.col-sm-2.control-label 제목
                                         .col-sm-10
