--- a/app/views/oftenqna/new.jade
+++ b/app/views/oftenqna/new.jade
@@ -60,7 +60,7 @@ block content
                                             input.form-control(name='oftenqna[title]', type='text', style="ime-mode:active", required)
                                     .form-group
                                         .col-sm-12
-                                            textarea#summernote.summernote
+                                            textarea#summernote.summernote(name='oftenqna[content]')
                                     .row
                                         .col-md-12.portlets
                                             .m-b-30
