#KSY 자주묻는질문과답 서버노트 및 첨부파일 수정

--- a/app/views/oftenqna/edit.jade
+++ b/app/views/oftenqna/edit.jade
@@ -102,7 +102,13 @@ block content
                                                         - }
                                                     - }
                                                 // end 접수내용
+                                                hr
                                     - }
+
+                                    .row
+                                        .col-md-12.portlets
+                                            .m-b-30
+                                                input#attach-file.file(name='oftenqna[attach-file]', data-upload-url="#", type='file', multiple='')
 block footer
 
 
