--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -1,17 +1,9 @@
 extends ../layouts/default
 block head
     title  1-2 처리진행현황 목록
-    // Plugins css
-    link(href='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
-    link(href='/plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
-    link(href='/plugins/select2/select2.css', rel='stylesheet', type='text/css')
-    link(href='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
-    link(href='/plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
-    link(href='/plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
-    link(href='/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
-    link(href='/plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
     // summernot
     link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
+
     link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
     link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
     link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
@@ -20,8 +12,9 @@ block head
     link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
     link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
     link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
-    style(type="text/css").
-        .highlight { background-color: yellow; color: red; }
+
+    //첨부파일
+    link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
 
     script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -33,7 +26,6 @@ block head
     // jQuery
     script(src='/assets/js/jquery.min.js')
     script(src='/assets/js/bootstrap.min.js')
-
     script(src='/assets/js/detect.js')
     script(src='/assets/js/fastclick.js')
     script(src='/assets/js/jquery.slimscroll.js')
@@ -49,10 +41,18 @@ block head
     script(src='/plugins/select2/select2.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
     script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+    script(src='/plugins/moment/moment.js')
+    script(src='/plugins/timepicker/bootstrap-timepicker.min.js')
+    script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
+    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+    script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
+    // form summernote
+    script(src='/plugins/summernote/dist/summernote.min.js')
 
-    script(src='/vendor/jquery/jquery.min.js')
+    //첨부파일
+    script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
 
-    script(src='/isu/js/incident/index.js')
+    script(src='/isu/js/incident/index.js', type='text/javascript')
 
 block content
     // ==============================================================
@@ -88,28 +88,31 @@ block content
                                                     option(value ='#{ProcessStatus[i].status_cd}') #{ProcessStatus[i].status_nm}
                                                 - }
                                             - }
+                                .form-group
                                     label.col-sm-2.control-label 검색기간
-                                    .col-sm-2
-                                        select.form-control
-                                            option 최근1주일
-                                            option 최근1개월
-                                            option 최근3개월
-                                            option 최근6개월
-                                            option 최근1년
-                                            option 전체검색
+                                    .col-sm-4
+                                        .input-group
+                                            .input-group
+                                                input.form-control(id='reg_date_from', name='reg_date_from', type='text', placeholder='yyyy-mm-dd', value=reg_date_from)
+                                                span.input-group-addon.bg-primary.b-0.text-white
+                                                    i.ion-calendar
+                                    .col-sm-4
+                                        .input-group
+                                            .input-group
+                                                input.form-control(id='reg_date_to', name='reg_date_to', type='text', placeholder='yyyy-mm-dd', value=reg_date_to)
+                                                span.input-group-addon.bg-primary.b-0.text-white
+                                                    i.ion-calendar 
                                 .form-group.m-b-0
-                                    label.col-sm-2.control-label
+                                    label.col-sm-2.control-label 검색어
                                     .col-sm-2
                                         select.form-control(id='searchType' name='searchType')
                                             option(value='title,content') 제목+내용
                                             option(value='title') 제목
                                             option(value='content') 내용
                                     .col-sm-6
-                                        input.form-control(type='text' id='searchText' name='searchText' value=searchText)
+                                        input.form-control(id='searchText' name='searchText' type='text' value=searchText)
                                     .col-sm-2
-                                        button.btn.btn-primary(type='button' id='searchBtn')
-                                            | 조회 
-                                            i.fa.fa-search.m-l-5
+                                        button.btn.btn-primary(id='searchBtn' type='button') 조회
                 // end Search Area
                 // start List Area 
                 .row
