--- a/app/views/company/show.jade
+++ b/app/views/company/show.jade
@@ -23,98 +23,103 @@ block head
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
+    //datepicker 추가
+    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+    //script(src='/isu/js/search/datepicker.js', type='text/javascript')
 
 block content
-      // ==============================================================
-      // Start right Content here
-      // ==============================================================
-      .content-page
-        // Start content
+    .content-page
         .content
-          .container
-            // Page-Title
-            .row
-              .col-sm-12
-                .page-title-box
-                  ol.breadcrumb.pull-right
-                    li
-                      a(href='#') Home
-                    li
-                      a(href='#') SD기본정보
-                    li.active 회사정보관리
-                  h4.page-title 회사정보 조회
-            .row
-              .col-sm-12
-                .card-box
-                  .btn-toolbar.form-group
-                    .pull-left
-                      button.btn.btn-default.waves-effect.waves-light.m-l-5(onclick="location.href='/company/list'")
-                        i.fa.fa-list-ul
-                        |  목록
-                      button.btn.btn-success.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/edit'") 
-                        i.fa.fa-edit
-                        |  수정
-                      button.btn.btn-inverse.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/delete'" id="deleteBtn") 
-                        i.fa.fa-remove
-                        |  삭제
-                    .pull-right
-                      button.btn.btn-primary.waves-effect.waves-light(type='submit')
-                        i.fa.fa-send-o
-                        |  저장
-                      button.btn.btn-default.waves-effect.m-l-5(type='reset') 
-                        i.fa.fa-undo
-                        |  취소
-                  hr
-                  form.form-horizontal.group-border-dashed
-                      .form-group
-                      label.col-sm-3.control-label 회사코드
-                      .col-sm-3
-                          input.form-control(type='text', name='company[company_cd]', readonly value='#{company.company_cd}', placeholder='')
-                      .form-group
-                      label.col-sm-3.control-label 회사명
-                      .col-sm-3
-                          input.form-control(type='text', name='company[company_nm]', readonly value='#{company.company_nm}', placeholder='')
-                      .form-group
-                      label.col-sm-3.control-label 업태
-                      .col-sm-3
-                          input.form-control(type='text', name='company[type]', readonly value='#{company.type}',placeholder='')
-                      .form-group
-                      label.col-sm-3.control-label 대표이사명
-                      .col-sm-3
-                          input.form-control(type='text', name='company[ceo_nm]', readonly value='#{company.ceo_nm}', placeholder='')
-                      .form-group
-                      label.col-sm-3.control-label 전화번호
-                      .col-sm-3
-                          input.form-control(type='text', name='company[tel_no]', readonly value='#{company.tel_no}', placeholder='')
-                      .form-group
-                      label.col-sm-3.control-label 팩스번호
-                      .col-sm-3
-                          input.form-control(type='text', name='company[fax_no]', readonly value='#{company.fax_no}',placeholder='')
-                      .form-group
-                      label.col-sm-3.control-label 회사주소1
-                      .col-sm-2
-                          input.form-control(type='text', name='company[zip_cd]', readonly value='#{company.zip_cd}',placeholder='')
-                      .col-sm-5
-                          input.form-control(type='text', name='company[addr]', readonly value='#{company.addr}',placeholder='')
-                      .col-sm-2
-                          span.btn.btn-sm.btn-primary(id='postcode') 우편번호 찾기
-                      .form-group
-                      label.col-sm-3.control-label 회사주소2
-                      .col-sm-7
-                          input.form-control(type='text', name='company[addr2]', readonly value='#{company.addr2}',placeholder='')
-                      .form-group
-                      label.col-sm-3.control-label 비고
-                      .col-sm-7
-                          input.form-control(type='text', name='company[bigo]', readonly value='#{company.bigo}',placeholder='')
-                      .form-group
-                      
-                     
-            // end row
-          // end container
-        // end content
+            .container
+                .row
+                    .col-sm-12
+                        .page-title-box
+                            ol.breadcrumb.pull-right
+                                li
+                                    a(href='#') Home
+                                li
+                                    a(href='#') SD기본정보
+                                li.active 회사정보관리
+                            h4.page-title 회사정보 조회
+                .row
+                    .col-sm-12
+                        .card-box
+                            .btn-toolbar.form-group
+                                .pull-left
+                                    button.btn.btn-default.waves-effect.waves-light.m-l-5(onclick="location.href='/company/list'")
+                                        i.fa.fa-list-ul
+                                        |  목록
+                                    button.btn.btn-success.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/edit'") 
+                                        i.fa.fa-edit
+                                        |  수정
+                                    button.btn.btn-inverse.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/delete'" id="deleteBtn") 
+                                        i.fa.fa-remove
+                                        |  삭제
+                                .pull-right
+                                    button.btn.btn-primary.waves-effect.waves-light(type='submit')
+                                        i.fa.fa-send-o
+                                        |  저장
+                                    button.btn.btn-default.waves-effect.m-l-5(type='reset') 
+                                        i.fa.fa-undo
+                                        |  취소
+                            hr
+                            form.form-horizontal.group-border-dashed
+                                .form-group
+                                    label.col-sm-3.control-label 회사코드
+                                    .col-sm-3
+                                        input.form-control(type='text', name='company[company_cd]', readonly value='#{company.company_cd}', placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 회사명
+                                    .col-sm-3
+                                        input.form-control(type='text', name='company[company_nm]', readonly value='#{company.company_nm}', placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 업태
+                                    .col-sm-3
+                                        input.form-control(type='text', name='company[type]', readonly value='#{company.type}',placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 대표이사명
+                                    .col-sm-3
+                                        input.form-control(type='text', name='company[ceo_nm]', readonly value='#{company.ceo_nm}', placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 전화번호
+                                    .col-sm-3
+                                        input.form-control(type='text', name='company[tel_no]', readonly value='#{company.tel_no}', placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 팩스번호
+                                    .col-sm-3
+                                        input.form-control(type='text', name='company[fax_no]', readonly value='#{company.fax_no}',placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 회사주소1
+                                    .col-sm-2
+                                        input.form-control(type='text', name='company[zip_cd]', readonly value='#{company.zip_cd}',placeholder='')
+                                    .col-sm-5
+                                        input.form-control(type='text', name='company[addr]', readonly value='#{company.addr}',placeholder='')
+                                    .col-sm-2
+                                        span.btn.btn-sm.btn-primary(id='postcode') 우편번호 찾기
+                                .form-group
+                                    label.col-sm-3.control-label 회사주소2
+                                    .col-sm-7
+                                        input.form-control(type='text', name='company[addr2]', readonly value='#{company.addr2}',placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 비고
+                                    .col-sm-7
+                                        input.form-control(type='text', name='company[bigo]', readonly value='#{company.bigo}',placeholder='')
+                                .form-group
+                                    label.col-sm-3.control-label 유지보수 기간
+                                    .col-sm-3
+                                        .input-group
+                                            input.form-control(id='date_from', name='company[date_from]', readonly type='text', placeholder='yyyy-mm-dd', value='#{company.date_from}')
+                                            span.input-group-addon.bg-primary.b-0.text-white
+                                                i.ion-calendar
+                                    .col-sm-3
+                                        .input-group
+                                            input.form-control(id='date_to', name='company[date_to]', readonly type='text', placeholder='yyyy-mm-dd', value='#{company.date_to}')
+                                            span.input-group-addon.bg-primary.b-0.text-white
+                                                i.ion-calendar 
+
         footer.footer.text-right
-          | 2017 © ISU Group.
-      // ==============================================================
-      // End Right content here
-      // ==============================================================
+            | 2017 © ISU Group.
+    // ==============================================================
+    // End Right content here
+    // ==============================================================
     // END wrapper
